--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -383,7 +383,7 @@
     left: 32px;
     bottom: 32px; */
     width: 90%;
-    height: 38%;
+    height: auto;
     left: 5%;
     bottom: 5%;
   }
