--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -48,7 +48,7 @@
     line-height: 40px;
     letter-spacing: 0.64px;
     margin: 0;
-    max-width: 300px;
+    width:100%;
   
     @media(min-width: 1023px) {
         margin: 0;
@@ -86,7 +86,7 @@
     line-height: 20px;
     margin-top: 48px;
     margin-bottom: 48px;
-    max-width: 236px;
+    width:100% ;
     display: block;
   
     @media(min-width:1023px) {
