--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -35,8 +35,12 @@
     } 
   }
   .heading-content{
+    display: flex;
+    justify-content: space-between;
+
+
     @media(min-width: 1023px) {
-        display: flex;
+       
         align-items: flex-end;
         text-align: left;
     }
@@ -48,7 +52,7 @@
     line-height: 40px;
     letter-spacing: 0.64px;
     margin: 0;
-    width:100%;
+    /* width:100%; */
   
     @media(min-width: 1023px) {
         margin: 0;
@@ -86,7 +90,7 @@
     line-height: 20px;
     margin-top: 48px;
     margin-bottom: 48px;
-    width:100% ;
+    /* width:100% ; */
     display: block;
   
     @media(min-width:1023px) {
