--- a/blocks/offers/offers.css
+++ b/blocks/offers/offers.css
@@ -36,11 +36,12 @@
   }
   .heading-content{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 
 
     @media(min-width: 1023px) {
-       
+        flex-direction: row;
         align-items: flex-end;
         text-align: left;
     }
