--- a/blocks/offer-list/offer-list.css
+++ b/blocks/offer-list/offer-list.css
@@ -1,13 +1,12 @@
-
-.deals-offers-container {
-  padding: 20px 20px 20px 20px; /*changes*/
+/* .deals-offers-container {
+  padding: 20px 20px 20px 20px;
   @media (max-width: 1023px) {
       display: flex;
       justify-content: center;
       padding: 10px;
   }
-}
-
+} */
+ 
 .offerList__wrapper-light {
   color: #18171A;
   background-color: white;
@@ -15,39 +14,40 @@
   display: flex;
   flex-direction: column;
   padding-top: 48px;
-  
-
+ 
+ 
   @media(min-width: 1023px) {
       display: inherit;
-      text-align: center;  
+      text-align: center;
+      padding: 80px 64px;  
   }
 }
-
+ 
 .offerList__wrapper-light .offerList__content {
   order: 1;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-
-
-
+ 
+ 
+ 
   @media(min-width: 1023px) {
       top: 110px;
       left: 64px;
       text-align: left;
-  } 
+  }
 }
-
-
+ 
+ 
 .offerList__content.heading-content{
   @media(min-width: 1023px) {
     display: flex;
     align-items: flex-end;
     text-align: left;
   }
-} 
-
+}
+ 
 .offerList__wrapper-light .offerList__content h2 {
   font-size: 32px;
   font-weight: 600;
@@ -55,7 +55,7 @@
   letter-spacing: 0.64px;
   margin: 0;
  
-
+ 
   @media(min-width: 1023px) {
       margin: 0;
       font-size: 64px;
@@ -66,7 +66,7 @@
       letter-spacing: 1.28px;
   }
 }
-
+ 
 .right-container__content .offerList__content.img-over-text .teaser__title p{
   font-family: "Kepler Std";
   font-size: 18px;
@@ -75,14 +75,14 @@
   line-height: 22px;
   letter-spacing: 0.36px;
   margin: 18px 0;
-  
-
+ 
+ 
   @media(min-width: 1023px) {
       font-size: 32px;
       margin: 32px 0;
   }
 }
-
+ 
 .offerList__wrapper-light .offerList__content p {
   color: var(--Primary-Main, #18171A);
   font-family: "Fira Sans";
@@ -93,7 +93,7 @@
   margin-top: 48px;
   margin-bottom: 48px;
   display: block;
-
+ 
   @media(min-width:1023px) {
       margin-top: 12px;
       font-size: 18px;
@@ -104,7 +104,7 @@
       max-width: 280px;        
   }
 }
-
+ 
 .offerList__wrapper-light .sub-container .offerList__content p {
   color: inherit;
   font-family: "Fira Sans";
@@ -116,7 +116,7 @@
   margin-top: 16px;
   max-width: 236px;
   display: block;
-
+ 
   @media(min-width:1023px) {
       margin-top: 12px;
       margin-bottom: 20px;
@@ -127,12 +127,12 @@
       max-width: 280px;        
   }
 }
-
+ 
 .offerList__wrapper .offerList__content .offerList__action {
   margin-top: 18px;
-
+ 
 }
-
+ 
 .offerList__wrapper-light .sub-container .offerList__content .offerList__action a {
   display: flex;
   padding: 6px 12px;
@@ -147,16 +147,16 @@
   line-height: 24px;
   border-radius: unset;
   text-decoration: none;
-
+ 
   @media(min-width: 1023px){
       font-size: 16px;
       padding: 8px 18px 8px 20px;
       margin: 0;
-      
+     
   }
-  
+ 
 }
-
+ 
 .offerList__wrapper-light .offerList__action-btn {
   display: flex;
   flex-direction: column;
@@ -166,38 +166,38 @@
   right: 0;
   left: 0;
   top: 100%;
-
+ 
   @media (min-width:1023px) and (max-width:1099px){
       position: static;
       min-width: 101px;
-
+ 
   }
-
+ 
   @media (min-width:1100px) {
       position: absolute;
       right: 0;
       top: auto;
       left: auto;
   }
-}   
-
+}  
+ 
 .offerList__wrapper-light .offerList__action {
   display: inline-flex;
   align-items: center;
-  margin-top: 24px;
-
+  margin-top: 18px;
+ 
   @media (min-width: 1023px) {
       position: absolute;
-      margin-top: 0;        
+      margin-top: 0;      
   }
 }
-
+ 
 .offerList__wrapper-light .sub-container {
   order: 2;
   display: flex;
   justify-content: space-between;
 }
-
+ 
 @media (min-width: 1023px) {
   .offerList__wrapper-light .sub-container {
       /* order: 2;
@@ -206,26 +206,26 @@
       gap: 24px;
       margin-top: 48px;
   }
-} 
-
+}
+ 
 .offerList__wrapper-light .sub-container .left-container{
   flex-grow: 1;
 }
-
+ 
 /* .right-container {
-  width: 300px; 
+  width: 300px;
 } */
-
-
+ 
+ 
 .offerList__wrapper-light .sub-container .left-container {
   display: none;
-
+ 
   @media(min-width: 1023px) {
       display: flex;
       position: relative;
   }
 }
-
+ 
 .offerList__wrapper-light .sub-container .left-container img,
 .offerList__wrapper-light .sub-container .left-container picture {
   position: absolute;
@@ -235,17 +235,22 @@
   height: 100%;
   object-fit: cover;
 }
-
+ 
 .offerList__wrapper-light .sub-container .left-container .teaser__description{
   font-size: 12px;
 }
-
+ 
 .offerList__wrapper-light .sub-container .left-container .teaser__action-btn{
   position: absolute;
   right: 0;
   bottom: 5%;
-} 
-
+ 
+  /* @media (min-width: 999px) {
+    position: relative;
+    bottom: 0;
+  } */
+}
+ 
 .offerList__wrapper-light .sub-container .left-container .teaser__action-btn a{
       display: flex;
       padding: 8px 12px;
@@ -260,27 +265,27 @@
       line-height: 24px;
       border-radius: unset;
       text-decoration: none;
-  
+ 
       @media(min-width: 1023px){
           font-size: 16px;
           padding: 8px 18px 8px 20px;
           margin: 0;
       }
 }
-
+ 
 .offerList__wrapper-light .sub-container .right-container {
   position: relative;
   display: block;
 }
-
+ 
 .offerList__wrapper-light .sub-container .right-container .right-container-subcontainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 16px;
-  width: 100%; 
+  width: 100%;
 }
-
-
+ 
+ 
 .offerList__wrapper-light .sub-container .right-container .right-container__content {
   position: absolute;
   left: 5%;
@@ -289,24 +294,24 @@
   color: white;
   z-index: 1;
 }
-
-
-
+ 
+ 
+ 
 .offerList__wrapper-light .sub-container .right-container .right-container__card-1 picture{
   width: 100%;
   height: auto;
   display: flex;
   justify-content: center;
-
+ 
 }
-
+ 
 .offerList__wrapper-light .sub-container .right-container .right-container__card-1 img {
   width: 100%;
   max-width: 100%;
   height: auto;
-  
+ 
 }
-
+ 
 .offerList__wrapper-light .sub-container .right-container .right-container__card-1 picture::before {
   content: "";
   position: absolute;
@@ -315,45 +320,45 @@
   width: 50%;
   height: 96%;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
-  z-index: 1; 
+  z-index: 1;
   pointer-events: none;
 }
-
+ 
 .offerList__wrapper-light .sub-container .right-container .right-container__card-1{
   position: relative;
 }
-
+ 
 .light-teaser.buyers-guide-teaser{
   height: 100%;
 }
-
+ 
 .light-teaser.buyers-guide-teaser .teaser__card {
   backdrop-filter: blur(20px);
   padding: 16px;
   text-align: left;
   height: 100%;
-
+ 
   @media(min-width: 1023px) {
       padding: 0px 32px 32px;
   }
 }
-
+ 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-light {
   background: var(--Gradients-Gradient-2, linear-gradient(225deg, #B3C4C7 -4.54%, #DAC8C6 115.1%));
   color: #18171A;
 }
-
+ 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-dark {
   background: var(--Primary-Main, #18171A);
   color: white;
-  
+ 
 }
-
+ 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-grey{
   background: var(--Gradients-Gradient-4---60, linear-gradient(238deg, rgba(56, 79, 110, 0.60) -11.12%, rgba(91, 91, 91, 0.60) 111.5%));
   color: white;
 }
-
+ 
 .offerList__wrapper-light .sub-container .left-container .light-teaser.buyers-guide-teaser .teaser__card{
   position: absolute;
   z-index: 1;
@@ -362,12 +367,12 @@
   left: 5%;
   bottom: 5%;
 }
-
+ 
 .right-container__card-2 .light-teaser .buyers-guide-teaser .teaser__card{
   height: 100%;
 }
-
-
+ 
+ 
 .light-teaser.buyers-guide-teaser .teaser__card .teaser__actions a::before {
   content: '';
   background-image: url('/content/dam/vishal_eds/white-slant-arrow.svg');
@@ -376,7 +381,7 @@
   width: 52px;
   height: 52px;
 }
-
+ 
 .light-teaser.buyers-guide-teaser .primary__btn {
   display: flex;
   flex-direction: column;
@@ -385,7 +390,7 @@
   text-decoration: underline;
   text-underline-offset: 2px;
   padding: 0;
-
+ 
   font-family: 'Fira Sans';
   font-size: 12px;
   font-style: normal;
@@ -395,7 +400,7 @@
   color: inherit;
   padding-bottom: 2px;
   background-color: transparent;
-
+ 
   @media(min-width:1023px) {
       font-size: 16px;
       line-height: 16px;
@@ -403,15 +408,15 @@
       padding-bottom: 1px;
   }
 }
-
+ 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-dark .teaser__actions a::before {
   background-image: url('/content/dam/vishal_eds/white-slant-arrow.svg');
 }
-
+ 
 .light-teaser.buyers-guide-teaser .teaser__card.teaser-light .teaser__actions a::before {
   background-image: url('/content/dam/vishal_eds/arrow.svg');
 }
-
+ 
 .light-teaser.buyers-guide-teaser .teaser__content {
   position: relative;
   display: flex;
@@ -419,13 +424,13 @@
   align-items: flex-start;
   gap: 12px;
 }
-  
+ 
 .right-container-subcontainer .light-teaser.buyers-guide-teaser .teaser__content {
   height: 100%;
   justify-content: space-between;
 }
-
-
+ 
+ 
 .light-teaser.buyers-guide-teaser .teaser__info .teaser__title
  {
   font-family: "Kepler Std";
@@ -434,23 +439,23 @@
   font-weight: 600;
   line-height: 22px;
   letter-spacing: 0.36px;
-  
-
+ 
+ 
   @media(min-width: 1023px) {
       font-size: 32px;
       padding: 16px 0px 16px 0px;
-
+ 
   }
 }
-
+ 
 .light-teaser.buyers-guide-teaser .teaser__info .teaser__description {
   margin-top: 16px;
   font-size: 12px;
   line-height: 16px;
   width: 85%;
   font-weight: 400;
-
-
+ 
+ 
   @media(min-width:1023px) {
       font-size: 16px;
       line-height: 24px;
@@ -458,7 +463,7 @@
      
   }
 }
-
+ 
 .light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__title{
   font-family: "Kepler Std";
   font-size: 18px;
@@ -467,28 +472,28 @@
   line-height: 22px;
   letter-spacing: 0.36px;
  
-  
+ 
   @media(min-width:1023px) {
       font-size: 32px;
       padding: 8px 0px 16px 0px;
   }
  }
-
+ 
 .light-teaser.buyers-guide-teaser .teaser__info.left-img-over-text .teaser__description{
   margin-top: 16px;
   font-size: 12px;
   line-height: 16px;
   width: 85%;
   font-weight: 400;
-  
+ 
   @media(min-width:1023px) {
       font-size: 16px;
       line-height: 24px;
       width: 67%;
   }
 }
-
-
+ 
+ 
  .btn--link {
   font-family: "Fira Sans", sans-serif;
   font-size: 12px;
@@ -500,31 +505,31 @@
   align-items: flex-start;
   gap: 10.24px;
   border-bottom: 0.64px solid var(--Primary-Main, #18171a);
-
+ 
   @media (min-width:1023px) {
     font-size: 16px;
   }
-} 
+}
 .btn--link-primary {
   color: var(--Primary-Main, #18171a);
 }
  .btn--link img {
   height: 16px;
-} 
-
+}
+ 
 /* General styles for the right container */
 .right-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
+ 
 /* Styles for the first card */
 .right-container__card-1 {
   width: 100%;
   max-width: 800px; /* Adjust as needed */
 }
-
+ 
 /* Styles for the picture element */
 .right-container__card-1 picture {
   width: 100%;
@@ -532,25 +537,25 @@
   display: flex;
   justify-content: center;
 }
-
+ 
 /* Styles for the image inside picture */
 .right-container__card-1 img {
   max-width: 100%; /* Ensure the image does not exceed its container */
   height: auto; /* Maintain aspect ratio */
   object-fit: cover; /* Ensure the image covers the entire container */
 }
-
+ 
 /* Styles for the content within the first card */
 .right-container__card-1 .right-container__content {
   padding: 0px;
 }
-
+ 
 /* Styles for the teaser title within the first card */
 .right-container__card-1 .teaser__title p{
   margin-bottom: 10px;
   font-size: 1.5em;
 }
-
+ 
 /* Responsive Design */
 @media (max-width: 500px){
   .right-container,
@@ -559,30 +564,30 @@
     width: 320px;
     margin: 0 auto;
   }
-
+ 
   .right-container__card-1 {
     max-width: none; /* Reset max-width for smaller screens */
   }
-
+ 
   .image-container {
       max-height: 180px;
     }
-
+ 
   .image-container img {
       height: 100%;
       clip-path: polygon(0 0, 100% 0, 100% 165px, 195px 165px, 185px 100%, 0 100%);
     }
-
+ 
     .teaser__card.teaser-dark{
       clip-path: polygon(0 15px, 30px 15px, 40px 0, 100% 0, 100% 100%, 0 100%);;
-   } 
+   }
    .teaser__card.teaser-light{
    clip-path: polygon(0 15px, 32% 15px, 48% 15px, 100% 15px, 100% 100%, 0 100%);
    }
 }
-
-
-
+ 
+ 
+ 
 @media (min-width: 501px) and (max-width: 768px) {
   .right-container,
   .right-container__card-1,
@@ -590,76 +595,76 @@
     width: 400px;
     margin: 0 auto;
   }
-
+ 
   .right-container__card-1 {
     max-width: none; /* Reset max-width for smaller screens */
   }
-
+ 
   .image-container {
       max-height: 200px;
     }
-
+ 
   .image-container img {
       height: 100%;
       clip-path:  polygon(0 0, 100% 0, 100% 185px, 235px 185px, 225px 100%, 0 100%);
     }
-
+ 
     .teaser__card.teaser-dark{
       clip-path: polygon(0 15px, 30px 15px, 40px 0, 100% 0, 100% 100%, 0 100%);;
-   } 
+   }
    .teaser__card.teaser-light{
    clip-path: polygon(0 15px, 32% 15px, 48% 15px, 100% 15px, 100% 100%, 0 100%);
    }
 }
-
+ 
 @media (min-width: 769px) and (max-width: 1023px) {
   .right-container,
   .right-container__card-1,
   .right-container-subcontainer {
     width: 650px;
   }
-
+ 
   .image-container {
       max-height: 300px;
     }
-
+ 
   .image-container img {
       height: 100%;
       clip-path: polygon(0 0, 100% 0, 100% 255px, 420px 255px, 410px 100%, 0 100%);
     }
-
+ 
     .teaser__card.teaser-dark{
       clip-path: polygon(0 15px, 90px 15px, 100px 0, 100% 0, 100% 100%, 0 100%);
-   } 
+   }
    .teaser__card.teaser-light{
    clip-path: polygon(0 15px, 32% 15px, 48% 15px, 100% 15px, 100% 100%, 0 100%);
    }
 }
-
+ 
 @media (min-width: 1024px) {
   .right-container,
   .right-container__card-1,
   .right-container-subcontainer {
     width: 620px;
-
+ 
   }
-
+ 
   .left-container{
     min-width: 350px;
   }
-
+ 
   .image-container {
       max-height: 250px;
     }
-
+ 
   .image-container img {
       height: 100%;
       clip-path: polygon(0 0, 100% 0, 100% 235px, 360px 235px, 350px 100%, 0 100%);
     }
-
+ 
     .teaser__card.teaser-dark{
       clip-path: polygon(0 15px, 45px 15px, 55px 0, 100% 0, 100% 100%, 0 100%);;
-   } 
+   }
    .teaser__card.teaser-light{
    clip-path: polygon(0 15px, 32% 15px, 48% 15px, 100% 15px, 100% 100%, 0 100%);
    }
